# cryptocafe

./: README.md  slides.json
cryptoCafe/: .gitignore  README.md  pyproject.toml
cryptoCafe/src/cryptocafe/: __init__.py  data.json  main.py
cryptoCafe/src/cryptocafe/templates/: index.html  onboarding.html  reels.html  reels2.html  reels3.html  settings.html  style.css
